--- a/flex/xx-box-model/index.html
+++ b/flex/xx-box-model/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grouping Selectors</title>
+  <title>CENTER THIS DIV</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <button class="classA">Click Me!</button>
-  <button class="classB">No, Click Me!</button>
+  <p class="box-one">one</p>
+  <p class="box-two">two</p>
+  
 </body>
 </html>
